grammar.js
    cql_library: ($) =>
      seq(
        optional($.library_definition),
        repeat($.definition),
        repeat($.statement)
      ),

    /* Definitions */

    definition: ($) =>
      choice(
        $.using_definition,
        $.include_definition,
        $.valueset_definition,
        $.codesystem_definition,
        $.parameter_definition,
        $.code_definition,
        $.concept_definition
      ),

    library_definition: ($) =>
      seq("library", $.qualified_identifier, optional($.version_specifier)),

    using_definition: ($) =>
      seq(
        "using",
        $.qualified_identifier,
        optional($.version_specifier),
        optional(seq("called", alias($.identifier, $.local_identifier)))
      ),

    concept_definition: ($) =>
      seq(
        optional($.access_modifier),
        "concept",
        $.identifier,
        ":",
        "{",
        alias($.code_or_codesystem_identifier, $.code_identifier),
        repeat(
          seq(",", alias($.code_or_codesystem_identifier, $.code_identifier))
        ),
        "}",
        optional($.display_clause)
      ),

    access_modifier: () => choice("public", "private"),

    /* Statements */

    statement: ($) =>
      choice(
        $.expression_definition,
        $.context_definition,
        $.function_definition
      ),

    context_definition: ($) =>
      seq(
        "context",
        optional(seq(alias($.identifier, $.model_identifier), ".")),
        $.identifier
      ),

    // TODO: functionIdentifier
    version_specifier: ($) => seq("version", alias($.string, $.version)),

    identifier: ($) =>
      choice($.default_identifier, $.quoted_identifier, $.delimited_identifier),

    qualified_identifier: ($) =>
      seq(repeat(seq(alias($.identifier, $.qualifier), ".")), $.identifier),

    default_identifier: () => /([A-Za-z]|'_')([A-Za-z0-9]|'_')*/,

    string: ($) =>
      seq(
        "'",
        repeat(choice($.single_quote_string_fragment, $.escape_sequence)),
        "'"
      ),

    single_quote_string_fragment: () => token.immediate(prec(1, /[^'\\]+/)),

    display_clause: ($) => seq("display", $.string),

    /** Dates **/
