test/corpus/definitions/using.txt
================
Using Definition
================

using FHIR version '4.0.1'

---

(cql_library
  (definition
    (using_definition
      (qualified_identifier
        (identifier
          (default_identifier)))
      (version_specifier
        (version
          (single_quote_string_fragment))))))
